--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 url = "*"
-serenity = { verson = "0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils", "cache"] }
+serenity = { version = "0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils", "cache"] }
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 linkify = "0.8.0"
